[project]
name = "desenvolvimento-flask"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    { name = "Jonathan Duarte", email = "devjonathanduarte@gmail.com" }
]
requires-python = ">=3.10,<3.12"

dependencies = [
    "flask==2.2.5",
    "sqlalchemy",
    "flask-sqlalchemy>=3.1,<4.0",
    "flask-migrate",
    "flask-jwt-extended>=4.6,<5.0",
    "jinja2<3.1",
    "werkzeug<2.3",
    "pytest>=9.0.2,<10.0.0",
    "pytest-mock",
    "gunicorn (>=24.1.1,<25.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "flask-bcrypt",
    "flask-marshmallow",
    "marshmallow-sqlalchemy (>=1.4.2,<2.0.0)",
    "apispec",
    "apispec-webframeworks"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest",
    "pytest-mock"
]
